--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#f48fb1</color>
+    <color name="colorPrimaryDark">#bf5f82</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorSecendary">#f8bbd0</color>
+    <color name="colorLight">#ffeeff</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
