--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,38 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="ToolbarTitle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/db_moment_x_bd</item>
+    </style>
+
+    <style name="VideoTitle">
+        <item name="android:fontFamily">@font/db_moment_x_bd</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="LinkUrl">
+        <item name="android:fontFamily">@font/db_moment_x</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="PlaylistTitle">
+        <item name="android:fontFamily">@font/db_moment_x_bd</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ListTitle">
+        <item name="android:fontFamily">@font/db_moment_x</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
