--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,10 @@
         <item name="android:textSize">15dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="CustomButton">
+        <item name="android:fontFamily">@font/db_moment_x_med</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
